# ppx_bin_prot

./: CHANGES.md  INSTALL.txt  META.ab  Makefile  README.md  _oasis  _tags  dune  install.ml  myocamlbuild.ml  opam  ppx_bin_prot.opam  setup.ml
bench/: dune  ppx_bin_prot_bench.ml
expect_tests/: allocation_tests.ml  dune  jbuild  mutually_recursive.mlt  polymorphic_recursion.mlt
js-utils/: install_tags.ml
shape/example0/: dune  jbuild
shape/src/: bin_shape_expand.ml  bin_shape_expand.mli  dune  jbuild
shape/test/: dune  examples.mlt  jbuild  test.ml
src/: META  dune  jbuild  ppx_bin_prot.ml  ppx_bin_prot.mldylib  ppx_bin_prot.mli
test/: bin_prot_test.ml  bin_prot_test_nonrec.ml  blob_test.ml  compatibility.ml  deriving_inline.ml  dune  edge_cases.mlt  example.ml  extension_tests.ml  jbuild  mac_test.ml  microbench.ml  modalities.ml  mutually_recursive.mlt  nonrec_test.ml  polymorphic_recursion.mlt  ppx_bin_prot_tests.ml  ppx_template_interaction.ml
test-allocation/: allocation_tests.ml  dune  ppx_bin_prot_tests_allocation.ml
test-nopervasives/: dune  ppx_bin_prot_nopervasives.ml
test-toplevel/: edge_cases.mlt  polymorphic_recursion.mlt
test/nopervasives/: dune
