opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/ppx_bin_prot"
bug-reports: "https://github.com/janestreet/ppx_bin_prot/issues"
dev-repo: "git+https://github.com/janestreet/ppx_bin_prot.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/ppx_bin_prot/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "base"
  "bin_prot"
  "ppx_helpers"
  "ppx_here"
  "ppxlib_jane"
  "dune"                {>= "3.17.0"}
  "ocaml-compiler-libs" {= "v0.17.0+ox"}
  "ppxlib"              {= "0.33.0+ox"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Generation of bin_prot readers and writers from types"
description: "
Part of the Jane Street's PPX rewriters collection.
"
